--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -1,12 +1,8 @@
 <template name="Header">
     <div class="ui top fixed borderless inverted menu">
   <div class="ui container">
-      <a class="item" href="{{pathFor 'Home_Page'}}"><h1>meteor-application-template</h1></a>
-      {{#if currentUser}}
-        <a class="{{ isActiveRoute 'Add_Stuff_Page'}} item" href="{{ pathFor 'Add_Stuff_Page' }}">Add Stuff </a>
-        <a class="{{ isActiveRoute 'List_Stuff_Page'}} item" href="{{ pathFor 'List_Stuff_Page' }}">List Stuff</a>
-      {{/if}}
-      <a href="#" class="right aligned item">{{> loginButtons align="right"}} </a>
+      <a class="item" href="{{pathFor 'Landing_Page'}}"><h1>Manoa Quest</h1></a>
+      <a class="item" href="{{ pathFor 'Add_Quest_Page' }}">Add Quest</a>
     </div>
   </div>
 </template>
