Finished mockup for student home page

--- a/app/imports/ui/layouts/footer.html
+++ b/app/imports/ui/layouts/footer.html
@@ -1,10 +1,9 @@
 <template name="Footer">
   <footer>
-    <div style="padding-top: 15px" class="ui center aligned container">
+    <div style="padding-top: 15px; padding-bottom: 15px; color: white;" class="ui center aligned container">
         <hr>
-        Department of Information and Computer Sciences <br />
-        University of Hawaii<br />
-        Honolulu, HI 96822
+        ICS 314 Final Project<br />
+        ManoaQuest
     </div>
   </footer>
 </template>
